# cqrs

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  ChangeLog.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  buildspec_test.yml  change_log.md  deny.toml  docker-compose.yml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  crates-io.yml  docker-image.yml  rust-ci.yml
cqrs-es2-core/: Cargo.toml
cqrs-es2-core/src/: lib.rs
cqrs-es2-core/src/aggregates/: i_aggregate.rs  mod.rs
cqrs-es2-core/src/commands/: i_command.rs  i_command_handler.rs
cqrs-es2-core/src/errors/: error.rs  mod.rs  user_error.rs
cqrs-es2-core/src/events/: event_context.rs  i_event.rs  i_event_consumer.rs  i_event_handler.rs  mod.rs
cqrs-es2-core/src/example_impl/: test.rs
cqrs-es2-core/src/queries/: i_query.rs  mod.rs  query_context.rs
cqrs-es2-core/src/test_framework/: aggregate_result_validator.rs  aggregate_test_executor.rs  test.rs  test_framework.rs
cqrs-es2-store/: Cargo.toml
cqrs-es2-store/src/: lib.rs
cqrs-es2-store/src/memory_store/: event_store.rs  query_store.rs
cqrs-es2-store/src/memory_store/test/: mod.rs  test_event_store.rs  test_query_store.rs
cqrs-es2-store/src/repository/: i_event_dispatcher.rs  i_event_store.rs  i_query_store.rs  repository.rs
cqrs-es2-store/src/repository/test/: dispatchers.rs  test_repository.rs
cqrs-es2-store/src/sql/: mod.rs
cqrs-es2-store/src/sql/postgres_store/: constants.rs  event_store.rs  query_store.rs
cqrs-es2-store/src/sql/postgres_store/test/: mod.rs  test_event_store.rs  test_query_store.rs
db/: init.sql
db/mariadb/: init.sql
db/mysql/: init.sql
db/postgres/: init.sql
demo/: Cargo.toml  Dockerfile  README.md  cqrs-demo.postman_collection.json  docker-compose.yml
demo/curl/: DepositMoney.json  WithdrawMoney.json  WriteCheck.json  lambda_payload.json  test_api.sh  test_lambda.sh
demo/db/: init.sql
demo/src/: command_extractor.rs  config.rs  lambda_main.rs  lib.rs  main.rs  metadata_extension.rs  queries.rs  route_handler.rs  services.rs  state.rs
demo/src/domain/: aggregate.rs  commands.rs  events.rs  mod.rs
docs/: tenets.md
docs/ladr/: 01-postgres-is-primary-datastore.md  02-use-async-rust.md
docs/versions/: change_log.md  migration_0_2_5.md  migration_0_2_6.md  migration_0_3_0.md  migration_0_4_0.md  migration_0_5_0.md
example/: Cargo.toml
example/src/: aggregate.rs  lib.rs  persist.rs
examples/grpc/: Cargo.toml  Makefile  README.md  build.rs
examples/grpc/proto/: bank_account_api.proto
examples/grpc/src/client/: main.rs
examples/grpc/src/proto/: bank_account_api.rs
examples/grpc/src/server/: arguments.rs  main.rs
examples/grpc/src/server/bank_account/: mod.rs
examples/grpc/src/server/bank_account/commands/: mod.rs
examples/grpc/src/server/bank_account/dispatchers/: logging_dispatcher.rs  mod.rs
examples/grpc/src/server/bank_account/events/: bank_account_event.rs
examples/grpc/src/server/bank_account/queries/: mod.rs
examples/grpc/src/server/bank_account/service/: bank_account_service.rs  mod.rs
examples/grpc/src/server/bank_account/stores/: bank_account_stores.rs
examples/grpc/src/server/bank_account/tests/: test.rs
examples/grpc/src/server/cqrs/: db.rs
examples/restful/: Cargo.toml  Makefile  README.md  docker-compose.yml  postman_collection.json
examples/restful/src/: main.rs
examples/restful/src/bank_account/: mod.rs
examples/restful/src/bank_account/aggregate/: bank_account.rs  mod.rs  test.rs
examples/restful/src/bank_account/commands/: bank_account_command.rs
examples/restful/src/bank_account/dispatchers/: logging_dispatcher.rs
examples/restful/src/bank_account/events/: mod.rs
examples/restful/src/bank_account/queries/: bank_account_query.rs
examples/restful/src/bank_account/service/: bank_account_command.rs  bank_account_query.rs  common.rs  mod.rs
examples/restful/src/bank_account/stores/: bank_account_stores.rs  mod.rs
examples/restful/src/cqrs/: db.rs  mod.rs
persistence/dynamo-es/: Cargo.toml  README.md  buildspec_test.yml  docker-compose.yml
persistence/dynamo-es/db/: create_tables.sh  dynamo_db.yaml
persistence/dynamo-es/src/: cqrs.rs  error.rs  event_repository.rs  helpers.rs  lib.rs  testing.rs  types.rs  view_repository.rs
persistence/dynamo-es/tests/: lib.rs
persistence/mysql-es/: CHANGELOG.md  Cargo.toml  README.md  buildspec_test.yml  docker-compose.yml
persistence/mysql-es/db/: init.sql
persistence/mysql-es/src/: cqrs.rs  error.rs  event_repository.rs  lib.rs  sql_query.rs  testing.rs  types.rs  view_repository.rs
persistence/mysql-es/tests/: lib.rs
persistence/postgres-es/: Cargo.toml  README.md  buildspec_test.yml  docker-compose.yml
persistence/postgres-es/db/: init.sql
persistence/postgres-es/src/: cqrs.rs  error.rs  event_repository.rs  lib.rs  sql_query.rs  testing.rs  types.rs  view_repository.rs
persistence/postgres-es/tests/: lib.rs
postgres-es/: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
postgres-es/src/: error.rs  event_repository.rs  lib.rs  view_repository.rs
src/: aggregate.rs  command.rs  config.rs  cqrs.rs  doc.rs  error.rs  event.rs  event_sink.rs  lib.rs  mem_store.rs  persist.rs  query.rs  query_wrapper.rs  store.rs  test.rs  tools.rs  view.rs
tests/: lib.rs  test_aggregate.rs  test_memory_store.rs  test_test_framework.rs  test_test_repository.rs
tokio-cqrs-es2-store/: Cargo.toml
tokio-cqrs-es2-store/src/: lib.rs
tokio-cqrs-es2-store/src/memory_store/: event_store.rs  query_store.rs
tokio-cqrs-es2-store/src/memory_store/test/: test_event_store.rs  test_query_store.rs
tokio-cqrs-es2-store/src/repository/: i_event_dispatcher.rs  i_event_store.rs  i_query_store.rs  mod.rs  repository.rs
tokio-cqrs-es2-store/src/repository/test/: dispatchers.rs  mod.rs  test_repository.rs
tokio-cqrs-es2-store/src/sql/: mod.rs
tokio-cqrs-es2-store/src/sql/postgres_store/: event_store.rs  query_store.rs
tokio-cqrs-es2-store/src/sql/postgres_store/test/: common.rs  test_event_store.rs  test_query_store.rs
(+132 files in other folders)
