[package]
name = "cqrs-es"
version = "0.4.12"
authors = ["Dave Garred <dave.garred@serverlesstechnology.com>"]
edition = "2021"
license = "Apache-2.0"
keywords = ["cqrs", "event-sourcing", "serverless"]
description = "A lightweight, opinionated CQRS and event sourcing framework."
documentation = "https://docs.rs/cqrs-es"
repository = "https://github.com/serverlesstechnology/cqrs"
readme = "README.md"
exclude = ["docs"]
rust-version = "1.70.0"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "^2.0.8"
tokio = { version = "1", features = ["macros", "sync", "rt"] }

[dev-dependencies]
uuid = { version = "1.7", features = ["v4"] }
chrono = { version = "^0.4.24", default-features = false, features = ["clock"] }
