[workspace]
members = [
    ".",
    "demo",
    "persistence/dynamo-es",
    "persistence/mysql-es",
    "persistence/postgres-es",
]

[workspace.package]
version = "0.4.12"
authors = ["Dave Garred <dave.garred@serverlesstechnology.com>"]
edition = "2021"
license = "Apache-2.0"
keywords = ["cqrs", "event-sourcing", "serverless"]
repository = "https://github.com/serverlesstechnology/cqrs"

[workspace.dependencies]
cqrs-es = { version = "0.4.12", path = "." }
serde = "^1.0.219"
tokio = "^1.45.0"
uuid = { version = "1.16", features = ["v4"] }

[package]
name = "cqrs-es"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
description = "A lightweight, opinionated CQRS and event sourcing framework."
documentation = "https://docs.rs/cqrs-es"
repository.workspace = true
readme = "README.md"
exclude = ["docs"]
rust-version = "1.79.0"

[dependencies]
async-trait = "0.1"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
thiserror = "^2.0.12"
tokio = { workspace = true, features = ["macros", "sync", "rt"] }

[dev-dependencies]
uuid.workspace = true
chrono = { version = "^0.4.41", default-features = false, features = ["clock"] }
