
[package]
name = "cqrs-es2-store"
version = "0.8.0"
authors = [
  "Dave Garred <dave.garred@serverlesstechnology.com>",
  "Bassem Girgis <brgirgis@gmail.com>",
]
edition = "2018"
license = "MIT"
description = "A Rust library providing lightweight CQRS and event sourcing framework."
readme = "README.md"
documentation = "https://docs.rs/cqrs-es2"
repository = "https://github.com/brgirgis/cqrs-es2"
keywords = ["cqrs", "event-sourcing", "es", "DDD"]


[dependencies]
# logging
log = "^0.4"

# serialization
serde = { version = "^1.0.127", features = ["derive"] }
serde_json = "^1.0.66"

# CQRS framework and postgres implementation
cqrs-es2-core = "0.8.0"

postgres = { version = "^0.19.1", features = ["with-serde_json-1"] }

[dev-dependencies]
#static_assertions = "^1.1.0"
uuid = { version = "0.8.2", features = ["v4"] }
