[package]
name = "cqrs-demo"
version = "0.4.5"
authors = ["Dave Garred <dave.garred@serverlesstechnology.com>"]
edition = "2021"
license = "Apache-2.0"
keywords = ["cqrs", "event-sourcing", "serverless"]
description = "A demo application for cqrs-es crate."
documentation = "https://docs.rs/cqrs-demo"
repository = "https://github.com/serverlesstechnology/cqrs-demo"
readme = "README.md"
publish = false

[dependencies]
cqrs-es = { path = ".." }
postgres-es = { path = "../postgres-es" }

async-trait = "0.1"
axum = "0.5"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = { version = "0.6", features = [ "postgres" , "runtime-tokio-rustls", "json"] }
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = "0.3"
