[package]
name = "cqrs-demo"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
description = "A demo application for cqrs-es crate."
documentation = "https://docs.rs/cqrs-demo"
repository.workspace = true
readme = "README.md"
publish = false
default-run = "cqrs-demo"

[dependencies]
cqrs-es = {path = "../", version = "0.4.12" }
postgres-es = { path = "../persistence/postgres-es" }

async-trait = "0.1"
axum = "0.6"
serde = { workspace = true, features = ["derive"]}
serde_json = "1.0"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls", "json"] }
chrono = { version = "^0.4.20", default-features = false, features = ["clock"] }
tokio = { workspace = true, features = ["full"] }
tower = "0.5"
tower-http = "0.4"

lambda_http = "0.8"
thiserror = "2.0.9"

[[bin]]
name = "cqrs-demo"
path = "src/main.rs"

[[bin]]
name = "bootstrap"
path = "src/lambda_main.rs"
