[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.60"
cqrs-es = { version = "0.4.5", path = ".." }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
