[package]
name = "postgres-es"
version = "0.4.5"
authors = ["Dave Garred <dave.garred@serverlesstechnology.com>"]
edition = "2021"
license = "Apache-2.0"
keywords = ["cqrs", "event-sourcing", "serverless"]
description = "A Postgres implementation of an event repository for cqrs-es."
repository = "https://github.com/serverlesstechnology/postgres-es"
documentation = "https://docs.rs/postgres-es"
readme = "README.md"

[dependencies]
cqrs-es = { version = "0.4.5", path = ".." }

async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlx = { version = "0.6", features = [ "postgres" , "runtime-tokio-rustls", "json"] }
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
uuid = { version = "1.1", features = ["v4"]}

