[package]
name = "dynamo-es"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
description = "A DynamoDB implementation of an event repository for cqrs-es."
repository.workspace = true
documentation = "https://docs.rs/dynamo-es"
readme = "README.md"

[dependencies]
cqrs-es.workspace = true
aws-sdk-dynamodb = "1.82"
serde = { workspace = true, features = ["derive"]}
serde_json = "1.0"
tokio = { workspace = true, features = ["rt"] }
thiserror = "2.0.12"

[dev-dependencies]
uuid.workspace = true
